--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">tic-tac-toe</string>
+    <string name="app_name">Tic Tac Toe Ranjan</string>
 </resources>
